@@ -1,3 +1,10 @@
+  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (compare_candidates): Compare sections according to
+	  section_list before comparing them lexicographically.
+	  (add_candidate): Do a better job of inserting each entry at the
+	  right place in the list.
+
 Sun Dec 23 04:47:02 GMT 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (determine_lang_table): Format man pages in UTF-8 if
